dex/faucet/dex-faucet-web.yaml
kind: Service
apiVersion: v1
metadata:
  name: dex-faucet-web-svc
  namespace: ckb-dex
spec:
  selector:
    app: dex-faucet-web
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex-faucet-web
  namespace: ckb-dex
spec:
  selector:
    matchLabels:
      app: dex-faucet-web
  replicas: 1
  template:
    metadata:
      labels:
        app: dex-faucet-web
    spec:
      containers:
        - name: dex-faucet-web
          image: public.ecr.aws/k9i5i2k0/dex:faucet-web-d7cce9e
          ports:
          - name: http
            containerPort: 80
          volumeMounts:
          - name: dex-faucet-web-conf
            mountPath: /etc/nginx/conf.d/
            readOnly: true
      volumes:
      - name: dex-faucet-web-conf
        configMap:
          name: dex-faucet-web-conf
