dex/faucet/dex-faucet-web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ckb-dex
  annotations:
    kubernetes.io/ingress.class: "nginx"
    
  name: dex-faucet-web-ingress
spec:
  rules:
  - host: gliaswap-faucet.ckbapp.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: dex-faucet-web-svc
          servicePort: 80
